<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/edit_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditAcitivty">

    <ProgressBar
        android:id="@+id/edit_create_progress_bar"
        android:layout_width="wrap_content"
        android:visibility="gone"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/edit_title_image_view"
        android:layout_width="128dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/camera" />

    <TextView
        android:id="@+id/edit_username_textView"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:layout_marginTop="12dp"
        android:fontFamily="serif-monospace"
        android:gravity="center"
        android:text="TextView"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_title_image_view" />

    <TextView
        android:id="@+id/edit_title_textView"
        android:layout_width="110dp"
        android:layout_height="21dp"
        android:layout_marginTop="72dp"
        android:gravity="center"
        android:text="@string/title_discription"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_username_textView" />


    <androidx.cardview.widget.CardView
        android:id="@+id/edit_cardView2"
        style="@style/title_cardview_style"
        app:cardCornerRadius="7dp"
        app:cardElevation="8dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_title_textView"
        app:layout_constraintVertical_bias="0.0">


        <ImageView
            android:id="@+id/edit_imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingLeft="12dp"
            android:paddingTop="15dp"
            android:src="@drawable/baseline_create_24" />

        <EditText
            android:id="@+id/edit_enter_title_textview"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="10dp"
            android:hint="@string/title_text_hint"
            android:padding="10dp" />


    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/edit_notes_textView"
        android:layout_width="110dp"
        android:layout_height="21dp"
        android:layout_marginTop="48dp"
        android:gravity="center"
        android:text="@string/notes_discription"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_cardView2" />


    <androidx.cardview.widget.CardView
        android:id="@+id/edit_notes_cardview"
        style="@style/title_cardview_style"
        app:cardCornerRadius="7dp"
        app:cardElevation="8dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_notes_textView">

        <EditText
            android:id="@+id/edit_notes_text_view"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:hint="@string/notes_text_hint"
            android:padding="10dp" />


    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/edit_update_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="#C80101"
        android:gravity="center"
        android:text="@string/update"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_notes_cardview"
        app:layout_constraintVertical_bias="0.555" />

    <ImageView
        android:id="@+id/edit_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="4dp"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/edit_title_image_view"
        app:layout_constraintEnd_toEndOf="@+id/edit_title_image_view"
        app:srcCompat="@drawable/baseline_camera_alt_24" />
</androidx.constraintlayout.widget.ConstraintLayout>